# All-in-Bitsets-Index

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt  bank-system
application/src/: main.cpp
indexes/: CMakeLists.txt
indexes/include/: AttrIndex.h  BitsetIndex.h  FlatIndex.h  SetIndex.h  util.h
indexes/include/bitsetindex/: bitsetindex.h
indexes/include/flatindex/: FlatIndex.h
indexes/src/: BitsetIndex.cpp  FlatIndex.cpp  SetIndex.cpp  bitsetindex.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  run_tests
test/src/: account_test.cpp
